[package]
name = "mathemizer"
version = "0.0.2"
description = "A math package"
authors = ["apinanyogaratnam"]
edition = "2021"
license = "MIT"
repository = "https://github.com/apinanyogaratnam/mathemizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
